--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "cd server;node app.js"
   },
   "author": "Arun",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "node": "^17.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   }
 }
