--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Arun",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
