--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Arun",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
