--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server;node app.js"
+    "start": "node index.js"
   },
   "author": "Arun",
   "license": "ISC",
@@ -13,6 +12,7 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.4.4",
